--- a/store/users/templates/users/login.html
+++ b/store/users/templates/users/login.html
@@ -4,21 +4,30 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-5">
-                {% if form.non_field_errors %}
-                    <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                {% if messages or form.non_field_errors %}
+                    <div class="alert
+                    {% if messages %} alert-success {% else %} alert-warning {% endif %}
+                    alert-dismissible fade show" role="alert"
                     style="margin-top: 50px;">
-                    {{ form.non_field_errors }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-            </div>
+                        {% if messages %}
+                            {% for message in messages %}
+                                {{ message }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.non_field_errors }}
+                        {% endif %}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                 {% endif %}
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Авторизация</h3>
+                    <div class="card-header">
+                        <h3 class="text-center font-weight-light my-4">Авторизация</h3>
                     </div>
                     <div class="card-body">
-                        <form action ="{% url 'users:login'%}" method="post">
-                            {% csrf_token %} 
+                        <form action="{% url 'users:login' %}" method="post">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
                                 {{ form.username }}
@@ -27,7 +36,6 @@
                                 <label class="small mb-1" for="{{ form.password.id_for_label }}">Пароль</label>
                                 {{ form.password }}
                             </div>
-                         
                             <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                 <a class="small" href="#">Забыли пароль?</a>
                                 <input class="btn btn-primary" type="submit" value="Авторизоваться">
@@ -44,12 +52,14 @@
                                 </a>
                                 <a href="#">
                                     <i class="fab fa-facebook fa-2x" style="color: #405794;"></i>
-                                </a> 
+                                </a>
                             </div>
                         </form>
                     </div>
                     <div class="card-footer text-center">
-                        <div class="small"><a href="{% url 'users:registration' %}">Нужен аккаунт? Зарегистрируйся!</a></div>
+                        <div class="small">
+                            <a href="{% url 'users:registration' %}">Нужен аккаунт? Зарегистрируйся!</a>
+                        </div>
                     </div>
                 </div>
             </div>
