--- a/store/users/templates/users/registration.html
+++ b/store/users/templates/users/registration.html
@@ -4,24 +4,27 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-7">
-                <div class="alert alert-warning alert-dismissible fade show" role="alert"
-                     style="margin-top: 50px;">
-                    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
+                {% if form.errors %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert" style="margin-top: 50px;">
+                        {{ form.errors }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
+
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Создать аккаунт</h3>
+                    <div class="card-header">
+                        <h3 class="text-center font-weight-light my-4">Создать аккаунт</h3>
                     </div>
                     <div class="card-body">
-                        <form action ="{% url 'users:registration'%}" method =  'post'>
+                        <form action="{% url 'users:registration' %}" method="post">
                             {% csrf_token %}
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
-                                      {{ form.first_name }}
+                                        {{ form.first_name }}
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -37,9 +40,8 @@
                                     {{ form.username }}
                                 </div>
                                 <div class="col-md-6">
-                                    <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
-                                        почты</label>
-                                        {{ form.email }}
+                                    <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной почты</label>
+                                    {{ form.email }}
                                 </div>
                             </div>
                             <div class="form-row">
@@ -51,9 +53,8 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label class="small mb-1" for="{{ form.password2.id_for_label }}">
-                                            Подтверждение пароля</label>
-                                            {{ form.password2 }}
+                                        <label class="small mb-1" for="{{ form.password2.id_for_label }}">Подтверждение пароля</label>
+                                        {{ form.password2 }}
                                     </div>
                                 </div>
                             </div>
@@ -63,11 +64,13 @@
                         </form>
                     </div>
                     <div class="card-footer text-center">
-                        <div class="small"><a href="{% url 'users:login' %}">Уже есть аккаунт? Авторизоваться</a></div>
+                        <div class="small">
+                            <a href="{% url 'users:login' %}">Уже есть аккаунт? Авторизоваться</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </main>
-{% endblock%}
+{% endblock %}
